--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View"/>
+
         <variable
             name="account"
             type="meta.simplifi.dropboxuploader.FullAccountViewModel"/>
@@ -15,69 +17,85 @@
 
     </data>
 
-    <LinearLayout
-        android:id="@+id/user_profile_layout"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/nav_header_height"
-        android:background="@drawable/side_nav_bar"
-        android:gravity="bottom"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageView"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginTop="4dp"
-            android:src="@{account.photoUrl}"
-            tools:src="@android:drawable/sym_def_app_icon"/>
+        android:layout_height="@dimen/nav_header_height">
 
         <LinearLayout
+            android:id="@+id/user_profile_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:background="@drawable/side_nav_bar"
+            android:gravity="bottom"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imageView"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="4dp"
+                android:src="@{account.photoUrl}"
+                tools:src="@android:drawable/sym_def_app_icon"/>
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/name_textView"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@{account.name}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    tools:text="Name"/>
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/name_textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{account.name}"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        tools:text="Name"/>
+
+                    <TextView
+                        android:id="@+id/email_textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{account.email}"
+                        tools:text="Email address"/>
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/email_textView"
+                    android:id="@+id/log_in_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{account.email}"
-                    tools:text="Email address"/>
-            </LinearLayout>
+                    android:layout_gravity="bottom"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:text="@{loggedIn.get() ? @string/log_out : @string/log_in}"
+                    tools:text="Log out"/>
 
-            <TextView
-                android:id="@+id/log_in_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:background="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:text="@{loggedIn.get() ? @string/log_out : @string/log_in}"
-                tools:text="Log out"/>
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="16dp"
+            android:src="@drawable/dropbox_white"
+            android:tint="@android:color/white"
+            android:visibility="@{loggedIn.get() ? View.GONE : View.VISIBLE}"
+            tools:visibility="gone"/>
+
+    </FrameLayout>
+
 </layout>
 
