Changed Uploads to Uploaded

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/nav_uploads"
         android:icon="@drawable/ic_menu_cloud_upload"
-        android:title="Uploads"/>
+        android:title="@string/menu_uploaded"/>
 
 </menu>
