Cleaned up some code

--- a/app/src/main/res/layout/layout_file_item.xml
+++ b/app/src/main/res/layout/layout_file_item.xml
@@ -29,7 +29,7 @@
             android:layout_gravity="center_vertical"
             android:contentDescription="icon"
             android:scaleType="centerCrop"
-            bind:dbxUri="@{fileItem.fileUri}"/>
+            bind:dbxUri="@{fileItem.fileThumbnailUri}"/>
 
         <TextView
             android:id="@+id/text"
