Fixed an error with file name casing

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="login"
-            type="meta.simplifi.dropboxuploader.LoginViewModel"/>
+            type="meta.simplifi.dropboxuploader.NavLoginViewModel"/>
 
     </data>
 
